--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,7 +63,8 @@
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.5",
     "recharts": "^2.15.4",
-    "sonner": "^2.0.7",
+  "sonner": "^2.0.7",
+  "leva": "^0.10.17",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
